Refactor:	vpr::InetAddr::getHostname() now returns a 		vpr::ReturnStatus object so that user-level code can test 		to see if a valid hostname was returned.  At some point, I 		think it could be beneficial to add some more error codes 		to vpr::ReturnStatus so that this method can return a 		specific error code rather than just vpr::ReturnStatus::Fail.
Bumped version to 0.36.0 to mark this API change.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14926 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-05-08 patrickh Changed vpr::InetAddr::getHostname() to return something
+                    meaningful if the hostname lookup fails.
+                    NEW VERSION: 0.36.0
 2004-04-21 patrickh With SPROC threads, thread-specific data is now stored in
            aronb    PRDA->usr2_data to avoid conflicts with OpenSG and
                     OpenThreads.
