--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2004-05-08 patrickh    Updated to VPR 0.36.0.
+                       NEW VERSION: 0.16.3
 2004-04-10 patrickh    Added a new Swing look and feel called Liquid.
 2004-04-05 patrickh    Changed the default omniORB version tested for by
                        configure to omniORB4.
