Noted new driver...
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15018 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,7 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-21-2004 dshipton    Added in USDigital SerialEncoder driver for Baron table.
 May-08-2004 patrickh    Updated to VPR 0.36.0.
-                        NEW VERSION: 0.15.1
 Apr-26-2004 pallindo    Refactored glove support.
                         NEW VERSION: 0.15.0
 Apr-11-2004 patrickh    Gadgeteer now depends on an installed version of GMTL.
