Removed vrj::Timer.  Its functionality has long since been superceded by vpr::Interval.  Bumped version number to 1.1.151.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15026 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-22-2004 patrickh    Removed vrj::Timer.  vpr::Interval should be used
+                        instead.
+Apr-28-2004 aronb       NEW VERSION: 1.1.151
 
 [2.0 Alpha 4 released - 4.28.2004]=============================================
 Apr-28-2004 aronb       NEW VERSION: 1.1.150
