--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,8 +1,12 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-22-2004 patrickh    Moved pfSoundNode and pfSoundTraverser out of the
+                        vrj_pf library and into the sample code tree under
+                        pfTools.
+                        NEW VERSION: 1.1.152
 May-22-2004 patrickh    Removed vrj::Timer.  vpr::Interval should be used
                         instead.
-Apr-28-2004 aronb       NEW VERSION: 1.1.151
+                        NEW VERSION: 1.1.151
 
 [2.0 Alpha 4 released - 4.28.2004]=============================================
 Apr-28-2004 aronb       NEW VERSION: 1.1.150
