Moved the class vrj::FileIO out of the base VR Juggler library and into the Performer sample utility code.  It now lives in the pfTools directory and is called vrjutil::FileIO.  Nothing except the Performer sample applications used this class, so in my estimation, it does not belong in the base VR Juggler library.  Furthermore, after looking at what vrjutil:FileIO does, I think it would be beneficial to replace the whole class by a couple of Boost.Filesystem calls.
Bumped version to 1.1.153.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15030 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-22-2004 patrickh    Moved vrj::FileIO out of the vrj library and into the
+                        sample code tree under pfTools.
+                        NEW VERSION: 1.1.153
 May-22-2004 patrickh    Moved pfSoundNode and pfSoundTraverser out of the
                         vrj_pf library and into the sample code tree under
                         pfTools.
