noted standalone driver...
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15074 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-26-2004 dshipton    Added a standalone driver for USDigital SerialEncoder
 May-21-2004 dshipton    Added in USDigital SerialEncoder driver for Baron table.
 May-08-2004 patrickh    Updated to VPR 0.36.0.
 Apr-26-2004 pallindo    Refactored glove support.
