--- a/modules/vrjuggler/ChangeLog
+++ b/modules/vrjuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-06-2004 patrickh    Refactored surface viewport configurations to remove
+                        unnecessary nesting of configuration elements.
 May-22-2004 patrickh    Moved vrj::FileIO out of the vrj library and into the
                         sample code tree under pfTools.
                         NEW VERSION: 1.1.153
