--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-01-2004 patrickh    Fixed a problem with multiple threads and Python 2.3 on
+                        Windows.
 May-03-2004 patrickh    Added a Visual Studio build for use on Windows.
 May-01-2004 patrickh    NEW VERSION: 0.9.0
 Mar-12-2004 patrickh    Fixed conditional handling of vrj.OsgApp so that we do
