Updated the version to 0.9.1.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15191 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-02-2004 patrickh    NEW VERSION: 0.9.1
 Jul-01-2004 patrickh    Fixed a problem with multiple threads and Python 2.3 on
                         Windows.
 May-03-2004 patrickh    Added a Visual Studio build for use on Windows.
