Added some very basic exception handling to the VR Juggler kernel in a place that has caused me a lot of trouble: the point at which the application object is handed to the Draw Manager.  I updated vrj::GlDrawManager::setApp() so that, instead of exploding, it prints a useful error message and throws an exception when the dynamic_cast<T>() call fails.  I did this mainly because I was sick of wasting time repeatedly debugging the same basic problem solely because there wasn't enough run-time information to understand the problem quickly.
The exceptions I defined are intended to be thrown by managers.  Of
course, managers such as the Input Manager or the Config Manager cannot
derive from the base type vrj::ManagerException, so this idea could use
some work.  Anyone should feel free to refactor, rewrite, and otherwise
improve on what I have started here.

Bumped version to 1.1.154.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15259 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-12-2004 patrickh    Began adding very basic exception handling to the
+                        kernel.
+                        NEW VERSION: 1.1.154
 Jun-06-2004 patrickh    Refactored surface viewport configurations to remove
                         unnecessary nesting of configuration elements.
 May-22-2004 patrickh    Moved vrj::FileIO out of the vrj library and into the
