--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-14-2004 patrickh    NEW VERSION: 0.9.2
 Jul-12-2004 patrickh    Exposed vpr::ObjectReader, vpr::ObjectWriter,
                         vpr::ReadableObject, vpr::WriteableObject, and
                         vpr::SerializableObject.
