My furious coding on the new display window custom editor has reached a point where things are fairly stable, so I am officially adding the display window custom editor to the build and to the VRJConfig Control Panel.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15392 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-28-2004 patrickh    Added the first version of the display window custom
+                        editor to the VRJConfig Control Panel.
 Jul-12-2004 patrickh    Began adding very basic exception handling to the
                         kernel.
                         NEW VERSION: 1.1.154
